--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "724-events",
   "version": "0.1.0",
+  "homepage": "https://marioncorvez.github.io/724-events",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .eslintrc.js ./src",
@@ -47,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^2.6.2"
   }
 }
