--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "724-events",
   "version": "0.1.0",
   "homepage": "https://marioncorvez.github.io/724-events",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
